Added open clickable links in new page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="project-description">
             <h3 class="project-title">Finance</h2>
               <div class="justify-content-evenly">
-                <a href="https://sage-swan-c8d97c.netlify.app/">
+                <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
             <img
               src="/images/fidelity.png"
               class="img-fluid mb-4"
@@ -96,7 +96,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Weather</h2>
-            <a href="https://prismatic-cascaron-e85dc5.netlify.app/">  
+            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">  
             <img
               src="/images/tejas 2.png"
               class="img-fluid mb-4"
@@ -142,7 +142,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Dictionary</h2>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -166,7 +166,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Weather 2</h2>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
@@ -190,7 +190,7 @@
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title">Web Store</h2>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/">
+            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
             <img
               src="/images/coming soon.png"
               class="img-fluid mb-4"
