Update Hero SEO

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/portfolio mug 3.png" class="img-fluid mug" />
+          <img src="/images/portfolio mug 3.png" class="img-fluid mug" title="M.M. Lawry in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
