Center nav bar smaller screens

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
   <header>
    <div class="container">
-    <nav class="d-flex justify-content-between fixed-top">
+    <nav class="fixed-top">
         <img src="" class="" alt=""/>
         <ul>
           <li class="active"><a href="/" title="Homepage">Home</li></a>
