--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
 <section>
  <div class="container">
       <div class="row">
-        <div class="col text-center" id="contact-header">
+        <div class="col text-center">
           <h2><span class="page-name about-header-font">Contact</span></h2>
        </div>
       </div>
       <div class="row">
         <div class="col text-center">
-          <h2>Email</h2>
+          <h2 id="contact-header">Email</h2>
         </div>
       </div>
   </div>
