--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
  <div class="container">
       <div class="row">
         <div class="col text-center">
-          <h2><span class="page-name about-header-font">Contact</span></h2>
+          <h2><span class="page-name about-header-font" id="contact-header">Contact</span></h2>
        </div>
       </div>
       <div class="row">
         <div class="col text-center">
-          <h2 id="contact-header">Email</h2>
+          <h2>Email</h2>
         </div>
       </div>
   </div>
