--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 <section>
  <div class="container">
       <div class="row">
-        <div class="col text-center">
-          <h2><span class="page-name about-header-font" id="contact-header">Contact</span></h2>
+        <div class="col text-center" id="contact-header">
+          <h2><span class="page-name about-header-font">Contact</span></h2>
        </div>
       </div>
       <div class="row">
