--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             />
             </a>
             <p class="mb-4 project-description">
-              Built with HTML, CSS and Javascript - Not mobile friendly
+              Built with HTML, CSS and Javascript - <strong><em>Not mobile friendly</em></strong>
             </p>
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
               >View project</a
