Media queries, responsiveness

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center" id="epilogue-header">
-        <h2><span class="page-name about-header-font">Epilogue</span></h2>
+        <h2><span class="page-name misc-header-font">Epilogue</span></h2>
       </div>
       </div>
       <div class="row">
@@ -273,7 +273,7 @@
  <div class="container">
       <div class="row">
         <div class="col text-center" id="contact-header">
-          <h2><span class="page-name about-header-font">Contact</span></h2>
+          <h2><span class="page-name misc-header-font">Contact</span></h2>
        </div>
       </div>
       <div class="row">
