--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Weather 2</h2>
+            <h3 class="project-title">Weather Part Deux</h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
             <img
               src="/images/coming soon.png"
