--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="about"><a href="#about-header" title="About M.M. Lawry">About</li></a>
           <li class="project"><a href="#project-header" title="M.M. Lawry's projects">Portfolio</li></a>
           <li class="contact"><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
-          <li class="epilogue"><a href="#epilogue-header" title="M.M. Lawry special message">Epilogue</li></a>
+          <li class="epilogue d-none d-md-block"><a href="#epilogue-header" title="M.M. Lawry special message">Epilogue</li></a>
         </ul>
      </nav>
     </div>
