--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <nav class="fixed-top">
         <ul>
           <li class="home active"><a href="/" title="Homepage">Home</li></a>
-          <li class="about"><a href="#about-header" title="About M.M. Lawry">About</li></a>
-          <li class="project"><a href="#project-header" title="M.M. Lawry's projects">Portfolio</li></a>
+          <li class="about"><a href="#about-header" title="About MML">About</li></a>
+          <li class="project"><a href="#project-header" title="MML's projects">Portfolio</li></a>
           <li class="contact"><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
           <li class="epilogue d-none d-md-block"><a href="#epilogue-header" title="M.M. Lawry special message">Epilogue</li></a>
         </ul>
@@ -50,13 +50,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/portfolio mug 3.png" class="img-fluid mug" title="M.M. Lawry in VR" />
+          <img src="/images/portfolio mug 3.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
           <h2>Front-end Developer || Austin, TX</h2>
           <div class="mt-5">
-            <a href="#contact-header" class="btn btn-branding" title="Contact M.M. Lawry">Contact me</a
+            <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
         </div>
       </div>
@@ -68,151 +68,149 @@
       <div class="row">
         <div class="col text-center" id="project-header">
           <h2><span class="page-name project-header-font">Portfolio</span></h2>
+        </div>
       </div>
-     </div>
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Finance</h2>
-              <div class="justify-content-evenly">
+            <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">Finance</a></h2>
                 <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
-            <img
-              src="/images/fidelity.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Finance project"
-              title="Fidelity facts"
-            />
-            </a>
-            <p class="mb-4 project-description">
-              Built with HTML, CSS and Javascript
-            </p>
-            <a
-              href="https://sage-swan-c8d97c.netlify.app/"
-              class="btn btn-launch-button mb-5"
-              title="Launch Fidelity page"
-              target="_blank"
-              >View project</a
-            >
-          </div>
-        </div>
-       </div> 
-        <div class="col-md-4">
-          <div class="project-description">
-            <h3 class="project-title">Weather</h2>
-            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">  
-            <img
-              src="/images/tejas 2.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Weather project"
-              title="Weather forecast"
-            />
-            </a>
-            <p class="mb-4 project-description">
-              Built with HTML, CSS and Javascript - <strong><em>Not mobile friendly</em></strong>
-            </p>
-            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
-              >View project</a
-            >
+                <img
+                  src="/images/fidelity.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Finance project"
+                  title="Fidelity facts"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                  Built with HTML, CSS and Javascript
+                </p>
+                <a
+                  href="https://sage-swan-c8d97c.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch Fidelity page"
+                  target="_blank"
+                  >View project</a
+                >
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Gambling</h2>
-            <a href="https://vocal-melba-9d53a1.netlify.app/">
-            <img
-              src="/images/ethereum.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Gambling project"
-              title="Crypto coin Ethereum"
-            />
-             </a>
-            <p class="mb-4 project-description">
-             HTML, CSS and Javascript
-            </p>
-            <a
-              href="https://vocal-melba-9d53a1.netlify.app/"
-              class="btn btn-launch-button mb-5"
-              title="Launch Ethereum page"
-              target="_blank"
-              >View project</a
-            >
+            <h3 class="project-title"><a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">Weather</a></h2>
+            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">
+                <img
+                  src="/images/tejas 2.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Weather project"
+                  title="Weather forecast"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                  Built with HTML, CSS and Javascript - <strong><em>Not mobile friendly</em></strong>
+                </p>
+                <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
+                  >View project</a
+                >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">Gambling</a></h2>
+            <a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">
+                <img
+                  src="/images/ethereum.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Gambling project"
+                  title="Crypto coin Ethereum"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                HTML, CSS and Javascript
+                </p>
+                <a
+                  href="https://vocal-melba-9d53a1.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch Ethereum page"
+                  target="_blank"
+                  >View project</a
+                >
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Dictionary</h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Dictionary</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
-            <img
-              src="/images/coming soon.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Dictionary project"
-              title="Dictionary"
-            />
-            </a>
-            <p class="mb-4 project-description">
-             HTML, CSS, Javascript and React
-            </p>
-            <a
-              href="https://clinquant-khapse-d0c0d8.netlify.app/"
-              class="btn btn-launch-button mb-5"
-              title="Launch dictionary app"
-              target="_blank"
-              >Coming soon</a
-            >
+                <img
+                  src="/images/coming soon.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Dictionary project"
+                  title="Dictionary"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                HTML, CSS, Javascript and React
+                </p>
+                <a
+                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch dictionary app"
+                  target="_blank"
+                  >Coming soon</a
+                >
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Weather Deux</h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Weather Deux</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
-            <img
-              src="/images/coming soon.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Weather 2 project"
-              title="Weather forecast"
-            />
-            </a>
-            <p class="mb-4 project-description">
-             HTML, CSS, Javascript and React
-            </p>
-            <a
-              href="https://clinquant-khapse-d0c0d8.netlify.app/"
-              class="btn btn-launch-button mb-5"
-              title="Launch weather app"
-              target="_blank"
-              >Coming soon</a
-            >
+                <img
+                  src="/images/coming soon.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Weather 2 project"
+                  title="Weather forecast"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                HTML, CSS, Javascript and React
+                </p>
+                <a
+                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch weather app"
+                  target="_blank"
+                  >Coming soon</a
+                >
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title">Web Store</h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Web Store</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
-            <img
-              src="/images/coming soon.png"
-              class="img-fluid mb-4"
-              id="project-1"
-              alt="Web Store project"
-              title="E-commerce site"
-            />
-            </a>
-            <p class="mb-4 project-description">
-             HTML, CSS, React, and Next.js
-            </p>
-            <a
-              href="https://clinquant-khapse-d0c0d8.netlify.app/"
-              class="btn btn-launch-button mb-5"
-              title="Launch store-front"
-              target="_blank"
-              >Coming soon</a
-            >
+                <img
+                  src="/images/coming soon.png"
+                  class="img-fluid mb-4"
+                  id="project-1"
+                  alt="Web Store project"
+                  title="E-commerce site"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                HTML, CSS, React, and Next.js
+                </p>
+                <a
+                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch store-front"
+                  target="_blank"
+                  >Coming soon</a
+                >
           </div>
         </div>
       </div>
@@ -243,7 +241,7 @@
         <div class="col-md-6">
          <div class="center text-center">
           <img src="/images/mug-2.png" class="img-fluid" />
-        </div>
+         </div>
         </div>
        </div>
     </div>
