Added and updated some seo

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
        </div>
         <div class="col-md-6">
          <div class="center text-center">
-          <img src="/images/mug-2.png" class="img-fluid" />
+          <img src="/images/mug-2.png" class="img-fluid" title="MML" />
          </div>
         </div>
        </div>
@@ -283,7 +283,7 @@
 
   <footer>
       <div class="d-flex justify-content-center">
-        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email M.M. Lawry">mlawry95@gmail.com</a>
+        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email MML">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i></a>
