Update Home anchor tag

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
   <body>
 
   <header>
-    <div class="container" id="#home">
+    <div class="container" id="home">
       <nav class="fixed-top">
         <ul>
-          <li class="home active"><a href="/" title="Homepage">Home</li></a>
+          <li class="home active"><a href="#home" title="Homepage">Home</li></a>
           <li class="about"><a href="#about-header" title="About MML">About</li></a>
           <li class="project"><a href="#project-header" title="MML's projects">Portfolio</li></a>
           <li class="contact"><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
