Update home anchor tag

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <link rel="stylesheet" href="/css/style.css" />
   <title>Meet MML | Front-end Developer | Austin</title>
   </head>
-  <body>
+  <body id="home">
 
-  <header id="homepage">
+  <header>
     <div class="container">
       <nav class="fixed-top">
         <ul>
-          <li class="home active"><a href="/" title="Homepage">Home</li></a>
+          <li class="home active"><a href="#home" title="Homepage">Home</li></a>
           <li class="about"><a href="#about-header" title="About MML">About</li></a>
           <li class="project"><a href="#project-header" title="MML's projects">Portfolio</li></a>
           <li class="contact"><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
