Changed title to return to portfolio

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </p>
           <a
             href="#project-header"
-            title="View my portfolio"
+            title="Go to portfolio"
             class="btn btn-launch-button about-button mt-4"
             >See my work</a
           >
