Replace last name w/initials nav titles

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <li class="home active"><a href="#home" title="Homepage">Home</li></a>
           <li class="about"><a href="#about-header" title="About MML">About</li></a>
           <li class="project"><a href="#project-header" title="MML's projects">Portfolio</li></a>
-          <li class="contact"><a href="#contact-header" title="Contact M.M. Lawry">Contact</li></a>
-          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="M.M. Lawry special message">Epilogue</li></a>
+          <li class="contact"><a href="#contact-header" title="Contact MML">Contact</li></a>
+          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="MML's special message">Epilogue</li></a>
         </ul>
      </nav>
     </div>
