Update github title with initials

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email MML">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i></a>
+        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View MML's Github profile"></i></a>
       </div>
   </footer>
 
