--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <nav class="fixed-top">
         <ul>
           <li class="home active"><a href="#home" title="Homepage">Home</li></a>
-          <li class="about"><a href="#about-header" title="About MML">About</li></a>
-          <li class="project"><a href="#project-header" title="MML's projects">Portfolio</li></a>
-          <li class="contact"><a href="#contact-header" title="Contact MML">Contact</li></a>
-          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="MML's special message">Epilogue</li></a>
+          <li class="about"><a href="#about-header" title="About me">About</li></a>
+          <li class="project"><a href="#project-header" title="My projects">Portfolio</li></a>
+          <li class="contact"><a href="#contact-header" title="Contact me">Contact</li></a>
+          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</li></a>
         </ul>
      </nav>
     </div>
@@ -283,10 +283,10 @@
 
   <footer>
       <div class="d-flex justify-content-center">
-        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email MML">mlawry95@gmail.com</a>
+        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View MML's Github profile"></i></a>
+        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i></a>
       </div>
   </footer>
 
