Added borders to photos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
                   src="/images/fidelity.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Finance project"
                   title="Fidelity facts"
@@ -101,7 +101,7 @@
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">
                 <img
                   src="/images/tejas 2.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Weather project"
                   title="Weather forecast"
@@ -121,7 +121,7 @@
             <a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">
                 <img
                   src="/images/ethereum.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Gambling project"
                   title="Crypto coin Ethereum"
@@ -147,7 +147,7 @@
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Dictionary project"
                   title="Dictionary"
@@ -171,7 +171,7 @@
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Weather 2 project"
                   title="Weather forecast"
@@ -195,7 +195,7 @@
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
-                  class="img-fluid mb-4"
+                  class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Web Store project"
                   title="E-commerce site"
@@ -240,7 +240,7 @@
        </div>
         <div class="col-md-6">
          <div class="center text-center">
-          <img src="/images/mug-2.png" class="img-fluid" title="MML" />
+          <img src="/images/mug-2.png" class="img-fluid border border-5" title="MML" />
          </div>
         </div>
        </div>
