--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="container">
       <div class="row">
         <div class="col" id="about-header">
-          <h2 class="text-center"><span class="page-name about-header-font">About M.M. Lawry</span></h2>
+          <h2 class="text-center"><span class="page-name about-header-font">About</span></h2>
        </div>
       </div>
       <div class="row">
