--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">Finance</a></h2>
+            <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
                 <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
                   src="/images/fidelity.png"
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">Weather</a></h2>
+            <h3 class="project-title"><a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">
                 <img
                   src="/images/tejas 2.png"
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">Gambling</a></h2>
+            <h3 class="project-title"><a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank" title="Launch Ethereum page">Gambling</a></h2>
             <a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">
                 <img
                   src="/images/ethereum.png"
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Dictionary</a></h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch dictionary app">Dictionary</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
@@ -167,7 +167,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Weather Deux</a></h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch weather app">Weather Deux</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
@@ -191,7 +191,7 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">Web Store</a></h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
