--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="about"><a href="#about-header" title="About me">About</li></a>
           <li class="project"><a href="#project-header" title="My projects">Portfolio</li></a>
           <li class="contact"><a href="#contact-header" title="Contact me">Contact</li></a>
-          <li class="d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</li></a>
+          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</li></a>
         </ul>
      </nav>
     </div>
