--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch dictionary app">Dictionary</a></h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h2>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
@@ -159,7 +159,7 @@
                 <a
                   href="https://clinquant-khapse-d0c0d8.netlify.app/"
                   class="btn btn-launch-button mb-5"
-                  title="Launch dictionary app"
+                  title="Launch dictionary"
                   target="_blank"
                   >Coming soon</a
                 >
