Updated Hero photo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/portfolio mug 3.png" class="img-fluid mug" title="MML in VR" />
+          <img src="/images/portfolio-mug-4.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
