--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <div class="container">
       <nav class="fixed-top">
         <ul>
-          <li class="home active"><a href="#home" title="Homepage">Home</li></a>
-          <li class="about"><a href="#about-header" title="About me">About</li></a>
-          <li class="project"><a href="#project-header" title="My projects">Portfolio</li></a>
-          <li class="contact"><a href="#contact-header" title="Contact me">Contact</li></a>
-          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</li></a>
+          <li class="home active"><a href="#home" title="Homepage">Home</a></li>
+          <li class="about"><a href="#about-header" title="About me">About</a></li>
+          <li class="project"><a href="#project-header" title="My projects">Portfolio</a></li>
+          <li class="contact"><a href="#contact-header" title="Contact me">Contact</a></li>
+          <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</a></li>
         </ul>
      </nav>
     </div>
