--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
         </div>
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch weather app">Weather Deux</a></h2>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather Deux</a></h2>
+            <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/coming soon.png"
+                  src="/images/world weather.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Weather 2 project"
@@ -178,10 +178,10 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                HTML, CSS, Javascript and React
+                HTML, CSS, Javascript
                 </p>
                 <a
-                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  href="https://sage-boba-227bc0.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch weather app"
                   target="_blank"
