Removed some projects, altered some styling choices

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body id="home">
 
   <header>
-    <div class="container">
+    <div class="container hero-enchilada">
       <nav class="fixed-top">
         <ul>
           <li class="home active"><a href="#home" title="Homepage">Home</a></li>
@@ -84,7 +84,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                  Built with HTML, CSS and Javascript
+                  HTML, CSS and Javascript
                 </p>
                 <a
                   href="https://sage-swan-c8d97c.netlify.app/"
@@ -95,7 +95,7 @@
                 >
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title"><a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
             <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">
@@ -114,8 +114,8 @@
                   >View project</a
                 >
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+        <!-- <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title"><a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank" title="Launch Ethereum page">Gambling</a></h2>
             <a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">
@@ -138,9 +138,33 @@
                   >View project</a
                 >
           </div>
+        </div> -->
+        <div class="col-md-4">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
+            <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
+                <img
+                  src="/images/world weather 2.png"
+                  class="img-fluid mb-4 border border-5"
+                  id="project-1"
+                  alt="Weather 2 project"
+                  title="Weather forecast"
+                />
+                </a>
+                <p class="mb-4 project-description">
+                HTML, CSS, Javascript
+                </p>
+                <a
+                  href="https://sage-boba-227bc0.netlify.app/"
+                  class="btn btn-launch-button mb-5"
+                  title="Launch weather app"
+                  target="_blank"
+                  >View project</a
+                >
+          </div>
         </div>
-      </div>
-      <div class="row">
+      <!-- </div> -->
+      <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h2>
@@ -165,30 +189,8 @@
                 >
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="project-description">
-            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather Deux</a></h2>
-            <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
-                <img
-                  src="/images/world weather 2.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
-                  alt="Weather 2 project"
-                  title="Weather forecast"
-                />
-                </a>
-                <p class="mb-4 project-description">
-                HTML, CSS, Javascript
-                </p>
-                <a
-                  href="https://sage-boba-227bc0.netlify.app/"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch weather app"
-                  target="_blank"
-                  >View project</a
-                >
-          </div>
-        </div>
+      </div>
+      <div class="row d-flex align-items-center justify-content-center">
         <div class="col-md-4">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h2>
@@ -214,7 +216,6 @@
           </div>
         </div>
       </div>
-    </div>
 </section>
 
 <section>
