Updated anchor tags

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 </section>
 
    <section>
-    <div class="container">
-      <div class="row">
-        <div class="col text-center" id="project-header">
+    <div class="container" id="project-header">
+      <div class="row" id="project-header">
+        <div class="col text-center">
           <h2><span class="page-name project-header-font">Portfolio</span></h2>
         </div>
       </div>
@@ -220,8 +220,8 @@
 
 <section>
     <div class="container">
-      <div class="row">
-        <div class="col" id="about-header">
+      <div class="row" id="about-header">
+        <div class="col">
           <h2 class="text-center"><span class="page-name about-header-font">About M.M. Lawry</span></h2>
        </div>
       </div>
@@ -250,8 +250,8 @@
 
 <section>
     <div class="container">
-      <div class="row">
-        <div class="col text-center" id="epilogue-header">
+      <div class="row" id="epilogue-header">
+        <div class="col text-center">
         <h2><span class="page-name misc-header-font">Epilogue</span></h2>
       </div>
       </div>
@@ -269,8 +269,8 @@
 
 <section>
  <div class="container">
-      <div class="row">
-        <div class="col text-center" id="contact-header">
+      <div class="row" id="contact-header">
+        <div class="col text-center">
           <h2><span class="page-name misc-header-font">Contact</span></h2>
        </div>
       </div>
