--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 </section>
 
 <section>
-    <div class="container"  id="about-header">
-      <div class="row">
+    <div class="container">
+      <div class="row" id="about-header">
         <div class="col">
           <h2 class="text-center"><span class="page-name about-header-font">About M.M. Lawry</span></h2>
        </div>
