--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </div>
 </section>
 
-   <section>
-    <div class="container" id="project-header">
-      <div class="row" id="project-header">
+   <section id="project-header">
+    <div class="container" >
+      <div class="row">
         <div class="col text-center">
           <h2><span class="page-name project-header-font">Portfolio</span></h2>
         </div>
@@ -218,9 +218,9 @@
       </div>
 </section>
 
-<section>
+<section id="about-header">
     <div class="container">
-      <div class="row" id="about-header">
+      <div class="row">
         <div class="col">
           <h2 class="text-center"><span class="page-name about-header-font">About M.M. Lawry</span></h2>
        </div>
@@ -248,9 +248,9 @@
     </div>
 </section>
 
-<section>
+<section id="epilogue-header">
     <div class="container">
-      <div class="row" id="epilogue-header">
+      <div class="row">
         <div class="col text-center">
         <h2><span class="page-name misc-header-font">Epilogue</span></h2>
       </div>
@@ -267,9 +267,9 @@
     </div>
 </section>
 
-<section>
+<section id="contact-header">
  <div class="container">
-      <div class="row" id="contact-header">
+      <div class="row">
         <div class="col text-center">
           <h2><span class="page-name misc-header-font">Contact</span></h2>
        </div>
