Made project descriptions more uniform

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                HTML, CSS, Javascript
+                HTML, CSS and Javascript
                 </p>
                 <a
                   href="https://sage-boba-227bc0.netlify.app/"
@@ -204,7 +204,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                HTML, CSS, React, and Next.js
+                HTML, CSS, React and Next.js
                 </p>
                 <a
                   href="https://clinquant-khapse-d0c0d8.netlify.app/"
