Trying out full-screen hero

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body id="home">
 
   <header>
-    <div class="container hero-enchilada">
+    <div class="container">
       <nav class="fixed-top">
         <ul>
           <li class="home active"><a href="#home" title="Homepage">Home</a></li>
@@ -46,16 +46,16 @@
     </div>
   </header>
 
-<section>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
+<section class="hero">
+    <div class="container padless">
+      <div class="row padless">
+        <div class="col-md-6">
           <img src="/images/portfolio-mug-4.png" class="img-fluid mug" title="MML in VR" />
         </div>
-        <div class="col-sm-6 hero">
+        <div class="col-md-6 hero-enchilada">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
           <h2>Front-end Developer || Austin, TX</h2>
-          <div class="mt-5">
+          <div class="mt-4">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
         </div>
