--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
 <section>
-    <div class="container">
+    <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
           <img src="/images/portfolio-mug-4.png" class="img-fluid mug" title="MML in VR" />
@@ -64,7 +64,7 @@
 </section>
 
    <section>
-    <div class="container" id="project-header">
+    <div class="container">
       <div class="row" id="project-header">
         <div class="col text-center">
           <h2><span class="page-name project-header-font">Portfolio</span></h2>
