--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
             <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/world weather.png"
+                  src="/images/world weather 3.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Weather 2 project"
