Update Javascript official spelling

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                  HTML, CSS and Javascript
+                  HTML, CSS and JavaScript
                 </p>
                 <a
                   href="https://sage-swan-c8d97c.netlify.app/"
@@ -152,7 +152,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                HTML, CSS and Javascript
+                HTML, CSS and JavaScript
                 </p>
                 <a
                   href="https://sage-boba-227bc0.netlify.app/"
@@ -178,7 +178,7 @@
                 />
                 </a>
                 <p class="mb-4 project-description">
-                HTML, CSS, Javascript and React
+                HTML, CSS, JavaScript and React
                 </p>
                 <a
                   href="https://clinquant-khapse-d0c0d8.netlify.app/"
