--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
       <!-- <div class="row"> -->
         <div class="col-md-4">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h2>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
+            <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h2>
+            <a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
-                  src="/images/coming soon.png"
+                  src="/images/dictionary.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Dictionary project"
@@ -181,7 +181,7 @@
                 HTML, CSS, JavaScript and React
                 </p>
                 <a
-                  href="https://clinquant-khapse-d0c0d8.netlify.app/"
+                  href="https://lovely-nougat-78618c.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch dictionary"
                   target="_blank"
