Update link text

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   class="btn btn-launch-button mb-5"
                   title="Launch dictionary"
                   target="_blank"
-                  >Coming soon</a
+                  >View project</a
                 >
           </div>
         </div>
